smartsearch-app/smartsearch-db.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: smartsearch
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smartsearch-db
  namespace: smartsearch
  labels:
    app: smartSearch
    stage: production
    tier: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smartSearch
      stage: production
      tier: database
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: smartSearch
        stage: production
        tier: database
    spec:
      containers:
        - image: mongo:latest
          imagePullPolicy: Always
          name: smartsearch-db
          ports:
            - containerPort: 27017
          # volumeMounts:
          #   - mountPath: /data/configdb
          #     name: configdb
          #   - mountPath: /data/db
          #     name: db
      restartPolicy: Always
      # volumes:
      #   - name: configdb
      #     persistentVolumeClaim:
      #       claimName: mongo-config
      #   - name: db
      #     persistentVolumeClaim:
      #       claimName: mongo-db
---
apiVersion: v1
kind: Service
metadata:
  namespace: smartsearch
  name: smartsearch-db
  labels:
    app: smartSearch
    stage: production
    tier: database
spec:
  ports:
    - name: mongo
      port: 27017
      protocol: TCP
      targetPort: 27017
  selector:
    app: smartSearch
    stage: production
    tier: database
  type: ClusterIP
