smartsearch-app/smartsearch-web.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: spacelama
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: spacelama
  labels:
    app: smartSearch
    stage: production
    tier: frontend
  name: smartsearch-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smartSearch
      stage: production
      tier: frontend
  template:
    metadata:
      labels:
        app: smartSearch
        stage: production
        tier: frontend
    spec:
      containers:
        - image: spacelama/web:latest
          imagePullPolicy: Always
          name: smartsearch-web
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  namespace: spacelama
  name: smartsearch-web
  labels:
    app: smartSearch
    stage: production
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: smartSearch
    stage: production
    tier: frontend
  type: ClusterIP
