smartsearch-app/ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: smartsearch
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: smartsearch
  name: global-ingress
  annotations:
    kubernetes.io/tls-acme: "true" # If you use let's encrypt to get certificate
spec:
  rules:
  - host: localhost # Change with your own hostname
    http:
      paths:
      - path: /
        backend:
          serviceName: smartsearch-web
          servicePort: 80
      - path: /api
        backend:
          serviceName: smartsearch-api
          servicePort: 9000
